// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormSubmission does not render cancel button when cancel text and cancel action are not provided 1`] = `
<div>
  <div
    class="d-grid gap-2 mt-3"
  >
    <button
      class="btn btn-success"
      type="submit"
    >
      foo
    </button>
  </div>
</div>
`;

exports[`FormSubmission renders the submit and cancel 1`] = `
<div>
  <div
    class="d-grid gap-2 mt-3"
  >
    <button
      class="btn btn-success"
      type="submit"
    >
      foo
    </button>
    <button
      class="btn btn-link"
      type="button"
    >
      bar
    </button>
  </div>
</div>
`;
